cleaning and modernising code